# toy-mlir-out-of-tree-tutorial

./: .gitignore  CMakeLists.txt  README.md  build-mlir-18.sh
Docs/MISCELLANEOUS/CMAKE-HOW-TO/: CMAKE-KNOWLEDGE.md  CMAKE-TRICKS-TIPS.md
Docs/MISCELLANEOUS/UTILITY-COMMANDS/: GIT-COMMANDS.md
Docs/MLIR-KNOWLEDGE-BASE/: 1.WHAT-&-WHY-OF-MLIR-&-DIALECT.md  1.WHAT-WHY-OF-MLIR.md  2.WHAT-IS-DIALECT.md
Docs/TOY-TUTO/: 1.SETUP-TOY-PARSER.md
Docs/TOY-TUTO/0.LLVM+MLIR-initial-setup-docs/: 0.1.SETUP-MLIR-OUT-OF-TREE-TEMPLATE.md  0.2.SETUP-MLIR-TOY-PROJECT-SCAFFOLD.md
Docs/TOY-TUTO/0.LLVM+MLIR-initial-setup-docs/0.0.SETUP-LLVM/: 0.0.1.SETUP-LLVM-for-NEWBIES.md  0.0.2.SETUP-LLVM-for-ADVANCED-USERS.md  HOW-TO-MANAGE-MULTIVERSION-gcc-clang-LLVM-WITH-update-alternatives.md
Docs/TOY-TUTO/2.SETUP-TOY-DIALECT-&-EMIT-BASIC-MLIR/: 2.0.INIT-SETUP-OF-TOY-DIALECT.md
Docs/TOY-TUTO/2.SETUP-TOY-DIALECT-and-EMIT-BASIC-MLIR/: 2.0.INIT-SETUP-OF-TOY-DIALECT.md
cmake/: MyCustomCmakeUtils.cmake
tools/: CMakeLists.txt
tools/toy-compiler/: CMakeLists.txt  toy-compiler.cpp
tools/toy-compiler/include/Dialect/: CMakeLists.txt  Dialect.h  Ops.td
tools/toy-compiler/include/Dialect/ToyDialect/: CMakeLists.txt  ToyDialectBase.h  ToyDialectBase.td
tools/toy-compiler/include/toy-analysis-parser/: AST.h  Lexer.h  Parser.h
tools/toy-compiler/lib/: CMakeLists.txt
tools/toy-compiler/lib/Dialect/: CMakeLists.txt  Dialect.cpp
tools/toy-compiler/lib/Dialect/ToyDialect/: CMakeLists.txt  ToyDialectBase.cpp
tools/toy-compiler/lib/toy-parser/: AST.cpp  CMakeLists.txt
